--- a/report/20190708143733.html
+++ b/report/20190708143733.html
@@ -7131,52 +7131,52 @@
     "testPass": 3,
     "testResult": [
         {
-            "className": "城市列表",
-            "methodName": "/shop/shop/city-list",
-            "description": "无经纬度城市列表",
-            "spendTime": "0.434 s",
+            "className": "根据订单获取菜品信息",
+            "methodName": "/product/order-goods/draw",
+            "description": "根据订单获取菜品信息",
+            "spendTime": "0.918 s",
             "status": "成功",
             "log": [
-                "请求数据： {'lon': 0, 'lat': 0} <br/>",
-                "HOST： https://api-qa.weizhilian.com/shop/shop/city-list <br/>",
-                "Header {'content-type': 'application/json', 'bid': '10006', 'sid': '96', 'uid': '30', 'token': '066e9487bcf12e58af1662a18e738c90', 'locale': 'zh-CN', 'lon': '104.05883026123047', 'Accept': '*/*', 'sdkVersion': '2.7.2', 'Accept-Language': 'zh-cn', 'lat': '30.548831939697266', 'language': 'zh-CN', 'miniVersion': '2.3.2.10006', 'User-Agent': 'Mozilla/5.0 (iPhone; CPU iPhone OS 12_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 MicroMessenger/7.0.4(0x17000428) NetType/WIFI Language/zh_CN', 'Referer': 'https://servicewechat.com/wxd9a28df0646534d8/0/page-frame.html', 'Content-Length': '436', 'Accept-Encoding': 'br, gzip, deflate', 'Connection': 'keep-alive'}",
+                "请求数据： {'id': 51282, 'number': 5} <br/>",
+                "HOST： http://app-api-qa.weizhilian.com/product/order-goods/draw <br/>",
+                "Header {'aid': '174', 'bid': '10006', 'sid': '181', 'uid': '131', 'token': '36d8015fbf3949ddd53234b5669d248b', 'locale': 'zh-CN', 'lon': '', 'Accept': '*/*', 'sdkVersion': '2.7.2', 'Accept-Language': 'zh-cn', 'lat': '', 'language': 'zh-CN', 'miniVersion': '2.3.2.10006', 'User-Agent': 'Mozilla/5.0 (iPhone; CPU iPhone OS 12_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 MicroMessenger/7.0.4(0x17000428) NetType/WIFI Language/zh_CN', 'Referer': 'https://servicewechat.com/wxd9a28df0646534d8/0/page-frame.html', 'Content-Length': '436', 'Accept-Encoding': 'br, gzip, deflate', 'Connection': 'keep-alive'}",
                 "status： 200",
-                "Message： ok",
-                "响应结果： {'data': {'cityId': '510100', 'cityName': '成都市', 'count': '16', 'cityList': {'420100': {'cityid': 420100, 'parentid': 420000, 'type': 2, 'name': '武汉市', 'count': '1', 'cityId': 420100, 'cityName': '武汉市'}, '420200': {'cityid': 420200, 'parentid': 420000, 'type': 2, 'name': '黄石市', 'count': 0, 'cityId': 420200, 'cityName': '黄石市'}, '340100': {'cityid': 340100, 'parentid': 340000, 'type': 2, 'name': '合肥市', 'count': 0, 'cityId': 340100, 'cityName': '合肥市'}, '341500': {'cityid': 341500, 'parentid': 340000, 'type': 2, 'name': '六安市', 'count': 0, 'cityId': 341500, 'cityName': '六安市'}, '310100': {'cityid': 310100, 'parentid': 310000, 'type': 2, 'name': '上海市', 'count': '2', 'cityId': 310100, 'cityName': '上海市'}, '500100': {'cityid': 500100, 'parentid': 500000, 'type': 2, 'name': '重庆市', 'count': '14', 'cityId': 500100, 'cityName': '重庆市'}, '510100': {'cityid': 510100, 'parentid': 510000, 'type': 2, 'name': '成都市', 'count': '16', 'cityId': 510100, 'cityName': '成都市'}, '510400': {'cityid': 510400, 'parentid': 510000, 'type': 2, 'name': '攀枝花市', 'count': 0, 'cityId': 510400, 'cityName': '攀枝花市'}, '510800': {'cityid': 510800, 'parentid': 510000, 'type': 2, 'name': '广元市', 'count': 0, 'cityId': 510800, 'cityName': '广元市'}, '511600': {'cityid': 511600, 'parentid': 510000, 'type': 2, 'name': '广安市', 'count': 0, 'cityId': 511600, 'cityName': '广安市'}}}, 'status': 200, 'code': 0, 'message': 'ok', 'serverTime': 1562381887.706899}",
+                "Message： ",
+                "响应结果： {'data': {'ok': 1}, 'status': 200, 'code': 0, 'message': '', 'serverTime': 1562655816.198248}",
                 "断言内容： ['status=200', 'code=0']",
                 ""
             ]
         },
         {
-            "className": "城市列表",
-            "methodName": "/shop/shop/city-list",
-            "description": "有经纬度城市列表",
-            "spendTime": "0.376 s",
+            "className": "根据订单获取菜品信息",
+            "methodName": "/product/order-goods/get-list-by-order",
+            "description": "根据订单获取菜品信息",
+            "spendTime": "0.48 s",
             "status": "成功",
             "log": [
-                "请求数据： {'lon': '30.548751831054688', 'lat': '104.05888366699219'} <br/>",
-                "HOST： https://api-qa.weizhilian.com/shop/shop/city-list <br/>",
-                "Header {'content-type': 'application/json', 'bid': '10006', 'sid': '96', 'uid': '30', 'token': '066e9487bcf12e58af1662a18e738c90', 'locale': 'zh-CN', 'lon': '104.05883026123047', 'Accept': '*/*', 'sdkVersion': '2.7.2', 'Accept-Language': 'zh-cn', 'lat': '30.548831939697266', 'language': 'zh-CN', 'miniVersion': '2.3.2.10006', 'User-Agent': 'Mozilla/5.0 (iPhone; CPU iPhone OS 12_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 MicroMessenger/7.0.4(0x17000428) NetType/WIFI Language/zh_CN', 'Referer': 'https://servicewechat.com/wxd9a28df0646534d8/0/page-frame.html', 'Content-Length': '436', 'Accept-Encoding': 'br, gzip, deflate', 'Connection': 'keep-alive'}",
+                "请求数据： {'orderno': '1562655535201996403'} <br/>",
+                "HOST： http://app-api-qa.weizhilian.com/product/order-goods/get-list-by-order <br/>",
+                "Header {'aid': '174', 'bid': '10006', 'sid': '181', 'uid': '131', 'token': '36d8015fbf3949ddd53234b5669d248b', 'locale': 'zh-CN', 'lon': '', 'Accept': '*/*', 'sdkVersion': '2.7.2', 'Accept-Language': 'zh-cn', 'lat': '', 'language': 'zh-CN', 'miniVersion': '2.3.2.10006', 'User-Agent': 'Mozilla/5.0 (iPhone; CPU iPhone OS 12_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 MicroMessenger/7.0.4(0x17000428) NetType/WIFI Language/zh_CN', 'Referer': 'https://servicewechat.com/wxd9a28df0646534d8/0/page-frame.html', 'Content-Length': '436', 'Accept-Encoding': 'br, gzip, deflate', 'Connection': 'keep-alive'}",
                 "status： 200",
-                "Message： ok",
-                "响应结果： {'data': {'cityId': '510100', 'cityName': '成都市', 'count': '16', 'cityList': {'420100': {'cityid': 420100, 'parentid': 420000, 'type': 2, 'name': '武汉市', 'count': '1', 'cityId': 420100, 'cityName': '武汉市'}, '420200': {'cityid': 420200, 'parentid': 420000, 'type': 2, 'name': '黄石市', 'count': 0, 'cityId': 420200, 'cityName': '黄石市'}, '340100': {'cityid': 340100, 'parentid': 340000, 'type': 2, 'name': '合肥市', 'count': 0, 'cityId': 340100, 'cityName': '合肥市'}, '341500': {'cityid': 341500, 'parentid': 340000, 'type': 2, 'name': '六安市', 'count': 0, 'cityId': 341500, 'cityName': '六安市'}, '310100': {'cityid': 310100, 'parentid': 310000, 'type': 2, 'name': '上海市', 'count': '2', 'cityId': 310100, 'cityName': '上海市'}, '500100': {'cityid': 500100, 'parentid': 500000, 'type': 2, 'name': '重庆市', 'count': '14', 'cityId': 500100, 'cityName': '重庆市'}, '510100': {'cityid': 510100, 'parentid': 510000, 'type': 2, 'name': '成都市', 'count': '16', 'cityId': 510100, 'cityName': '成都市'}, '510400': {'cityid': 510400, 'parentid': 510000, 'type': 2, 'name': '攀枝花市', 'count': 0, 'cityId': 510400, 'cityName': '攀枝花市'}, '510800': {'cityid': 510800, 'parentid': 510000, 'type': 2, 'name': '广元市', 'count': 0, 'cityId': 510800, 'cityName': '广元市'}, '511600': {'cityid': 511600, 'parentid': 510000, 'type': 2, 'name': '广安市', 'count': 0, 'cityId': 511600, 'cityName': '广安市'}}}, 'status': 200, 'code': 0, 'message': 'ok', 'serverTime': 1562381888.093303}",
+                "Message： ",
+                "响应结果： {'data': {'tableCode': '', 'pickupCode': '1', 'nodrawNum': 3, 'number': 9, 'orderno': '1562655535201996403', 'type': 4, 'ctime': 1562655535, 'daySn': 1, 'userRemark': '', 'goodsList': [{'id': 51281, 'goodsName': '肥肠豆花', 'drawAlias': '', 'attributes': '', 'tableCode': '', 'unit': '份', 'goodsType': 1, 'number': 1, 'ctime': 1562655535, 'drawTime': 1562655550, 'changeTime': 0, 'refundTime': 0, 'drawed': 1, 'changed': 2, 'refunded': 2, 'drawNum': 1, 'nodrawNum': 0, 'refundNum': 0, 'changedNum': 0, 'operateStatus': 1, 'show': 1, 'goodsPrice': 4320, 'goodsStatus': 1, 'drawOperateStatus': 2, 'packageList': [], 'pickupTime': 0, 'recordId': 4960, 'pickupStatus': 2}, {'id': 51282, 'goodsName': '自贡香炒', 'drawAlias': '', 'attributes': '', 'tableCode': '', 'unit': '份', 'goodsType': 1, 'number': 5, 'ctime': 1562655535, 'drawTime': 1562655816, 'changeTime': 0, 'refundTime': 0, 'drawed': 1, 'changed': 2, 'refunded': 2, 'drawNum': 5, 'nodrawNum': 0, 'refundNum': 0, 'changedNum': 0, 'operateStatus': 1, 'show': 1, 'goodsPrice': 2160, 'goodsStatus': 1, 'drawOperateStatus': 2, 'packageList': [], 'pickupTime': 0, 'recordId': 4965, 'pickupStatus': 2}, {'id': 51283, 'goodsName': '自贡香炒', 'drawAlias': '', 'attributes': '', 'tableCode': '', 'unit': '份', 'goodsType': 1, 'number': 3, 'ctime': 1562655535, 'drawTime': 0, 'changeTime': 0, 'refundTime': 0, 'drawed': 2, 'changed': 2, 'refunded': 2, 'drawNum': 0, 'nodrawNum': 3, 'refundNum': 0, 'changedNum': 0, 'operateStatus': 1, 'show': 1, 'goodsPrice': 2331, 'goodsStatus': 1, 'drawOperateStatus': 1, 'packageList': [], 'pickupTime': 0, 'recordId': 0, 'pickupStatus': 0}], 'bookTime': 0, 'firstPickTime': 1562655816, 'drawNum': 6}, 'status': 200, 'code': 0, 'message': '', 'serverTime': 1562655816.678589}",
                 "断言内容： ['status=200', 'code=0']",
                 ""
             ]
         },
         {
-            "className": "城市列表",
-            "methodName": "/shop/shop/city-list",
-            "description": "错误经纬度城市列表",
-            "spendTime": "0.375 s",
+            "className": "按订单",
+            "methodName": "/product/table/list",
+            "description": "按订单/按桌位",
+            "spendTime": "0.202 s",
             "status": "成功",
             "log": [
-                "请求数据： {'lon': '104.548751831054688', 'lat': '30.05888366699219'} <br/>",
-                "HOST： https://api-qa.weizhilian.com/shop/shop/city-list <br/>",
-                "Header {'content-type': 'application/json', 'bid': '10006', 'sid': '96', 'uid': '30', 'token': '066e9487bcf12e58af1662a18e738c90', 'locale': 'zh-CN', 'lon': '104.05883026123047', 'Accept': '*/*', 'sdkVersion': '2.7.2', 'Accept-Language': 'zh-cn', 'lat': '30.548831939697266', 'language': 'zh-CN', 'miniVersion': '2.3.2.10006', 'User-Agent': 'Mozilla/5.0 (iPhone; CPU iPhone OS 12_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 MicroMessenger/7.0.4(0x17000428) NetType/WIFI Language/zh_CN', 'Referer': 'https://servicewechat.com/wxd9a28df0646534d8/0/page-frame.html', 'Content-Length': '436', 'Accept-Encoding': 'br, gzip, deflate', 'Connection': 'keep-alive'}",
+                "请求数据： {'type': 4, 'page': 1, 'size': 30, 'childType': 13} <br/>",
+                "HOST： http://app-api-qa.weizhilian.com/product/table/list <br/>",
+                "Header {'aid': '174', 'bid': '10006', 'sid': '181', 'uid': '131', 'token': '36d8015fbf3949ddd53234b5669d248b', 'locale': 'zh-CN', 'lon': '', 'Accept': '*/*', 'sdkVersion': '2.7.2', 'Accept-Language': 'zh-cn', 'lat': '', 'language': 'zh-CN', 'miniVersion': '2.3.2.10006', 'User-Agent': 'Mozilla/5.0 (iPhone; CPU iPhone OS 12_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 MicroMessenger/7.0.4(0x17000428) NetType/WIFI Language/zh_CN', 'Referer': 'https://servicewechat.com/wxd9a28df0646534d8/0/page-frame.html', 'Content-Length': '436', 'Accept-Encoding': 'br, gzip, deflate', 'Connection': 'keep-alive'}",
                 "status： 200",
-                "Message： ok",
-                "响应结果： {'data': {'cityId': '510100', 'cityName': '成都市', 'count': '16', 'cityList': {'420100': {'cityid': 420100, 'parentid': 420000, 'type': 2, 'name': '武汉市', 'count': '1', 'cityId': 420100, 'cityName': '武汉市'}, '420200': {'cityid': 420200, 'parentid': 420000, 'type': 2, 'name': '黄石市', 'count': 0, 'cityId': 420200, 'cityName': '黄石市'}, '340100': {'cityid': 340100, 'parentid': 340000, 'type': 2, 'name': '合肥市', 'count': 0, 'cityId': 340100, 'cityName': '合肥市'}, '341500': {'cityid': 341500, 'parentid': 340000, 'type': 2, 'name': '六安市', 'count': 0, 'cityId': 341500, 'cityName': '六安市'}, '310100': {'cityid': 310100, 'parentid': 310000, 'type': 2, 'name': '上海市', 'count': '2', 'cityId': 310100, 'cityName': '上海市'}, '500100': {'cityid': 500100, 'parentid': 500000, 'type': 2, 'name': '重庆市', 'count': '14', 'cityId': 500100, 'cityName': '重庆市'}, '510100': {'cityid': 510100, 'parentid': 510000, 'type': 2, 'name': '成都市', 'count': '16', 'cityId': 510100, 'cityName': '成都市'}, '510400': {'cityid': 510400, 'parentid': 510000, 'type': 2, 'name': '攀枝花市', 'count': 0, 'cityId': 510400, 'cityName': '攀枝花市'}, '510800': {'cityid': 510800, 'parentid': 510000, 'type': 2, 'name': '广元市', 'count': 0, 'cityId': 510800, 'cityName': '广元市'}, '511600': {'cityid': 511600, 'parentid': 510000, 'type': 2, 'name': '广安市', 'count': 0, 'cityId': 511600, 'cityName': '广安市'}}}, 'status': 200, 'code': 0, 'message': 'ok', 'serverTime': 1562381888.470297}",
+                "Message： ",
+                "响应结果： {'data': [{'tableId': 0, 'goodsTotalCount': 9, 'drawGoodsCount': 3, 'id': 887, 'type': 4, 'waitSecond': 281, 'code': '1', 'pickupCode': '1', 'daySn': 1, 'tableCode': '', 'bookTime': 0, 'orderno': '1562655535201996403'}], 'status': 200, 'code': 0, 'message': '', 'serverTime': 1562655816.881697}",
                 "断言内容： ['status=200', 'code=0']",
                 ""
             ]
@@ -7185,8 +7185,8 @@
     "testName": "划菜端接口自动化测试报告",
     "testAll": 3,
     "testFail": 0,
-    "beginTime": "2019-07-06 10:58:10",
-    "totalTime": "2s",
+    "beginTime": "2019-07-09 15:03:36",
+    "totalTime": "1s",
     "testSkip": 0,
     "testError": 0
 };
